force-app/main/default/objects/Movie_Theater__c/Movie_Theater__c.object-meta.xml
<CustomObject>
    <label>Movie Theater</label>
    <nameField>
        <label>Movie Theater Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Movie Theaters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>