force-app/main/default/objects/Movie_Theater__c/fields/Movie__c.field-meta.xml
<CustomField>
    <fullName>Movie__c</fullName>
    <label>Movie</label>
    <referenceTo>Movie__c</referenceTo>
    <relationshipLabel>Movie Theaters</relationshipLabel>
    <relationshipName>Movie_Theaters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>