force-app/main/default/objects/Movie_Theater__c/fields/Movie_Timings__c.field-meta.xml
<CustomField>
    <fullName>Movie_Timings__c</fullName>
    <label>Movie Timings</label>
    <type>DateTime</type>
</CustomField>