force-app/main/default/objects/Movie_Theater__c/fields/Screen__c.field-meta.xml
<CustomField>
    <fullName>Screen__c</fullName>
    <label>Screen</label>
    <referenceTo>Screen__c</referenceTo>
    <relationshipLabel>Movie Theaters</relationshipLabel>
    <relationshipName>Movie_Theaters</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>