force-app/main/default/objects/Movie_Theater__c/fields/Seat_A_3__c.field-meta.xml
<CustomField>
    <fullName>Seat_A_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seat A 3</label>
    <type>Checkbox</type>
</CustomField>