force-app/main/default/objects/Movie_Theater__c/fields/Seat_B_1__c.field-meta.xml
<CustomField>
    <fullName>Seat_B_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seat B 1</label>
    <type>Checkbox</type>
</CustomField>