force-app/main/default/objects/Movie_Theater__c/fields/Seat_D_2__c.field-meta.xml
<CustomField>
    <fullName>Seat_D_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seat D 2</label>
    <type>Checkbox</type>
</CustomField>